--- a/ratatouille.css
+++ b/ratatouille.css
@@ -2,6 +2,11 @@
   Base on KNACSS => www.KNACSS.com (2013-10) @author: Raphael Goetter, Alsacreations
 */
 
+body {
+  font-size: 1em;
+  line-height:1.5;
+}
+
 /* ==========================================================================
    RESET
    ========================================================================== */
@@ -17,6 +22,19 @@
 
 .bold {
   font-weight: bold;
+}
+
+.inner {
+  margin: 0 auto;
+  max-width: 61.25em;/*980px*/
+}
+
+iframe, img {
+  max-width: 100%;
+}
+
+img {
+  height: auto;
 }
 
 
@@ -60,29 +78,41 @@
 
 .msb { margin-bottom: 0.5em; }
 
+.mstb { margin: 0.5em 0; }
+
 .msl { margin-left: 0.5em; }
 
 .msr { margin-right: 0.5em; }
 
-/*Medium margin*/
-
-.mst { margin-top: 1em; }
-
-.msb { margin-bottom: 1em; }
-
-.msl { margin-left: 1em; }
-
-.msr { margin-right: 1em; }
+.mslr { margin: 0 0.5em; }
 
 /*Medium margin*/
+
+.mmt { margin-top: 1em; }
+
+.mmb { margin-bottom: 1em; }
+
+.mmtb { margin: 1em 0; }
+
+.mml { margin-left: 1em; }
+
+.mmr { margin-right: 1em; }
+
+.mmlr { margin: 0 1em; }
+
+/*Big margin*/
 
 .mbt { margin-top: 1.5em; }
 
 .mbb { margin-bottom: 1.5em; }
 
+.mbtb { margin: 1em 0; }
+
 .mbl { margin-left: 1.5em; }
 
 .mbr { margin-right: 1.5em; }
+
+.mblr { margin: 0 1em; }
 
 /*Small padding*/
 
@@ -90,26 +120,39 @@
 
 .psb { padding-bottom: 0.5em; }
 
+.pstb { padding: 0.5em 0; }
+
 .psl { padding-left: 0.5em; }
 
 .psr { padding-right: 0.5em; }
 
-/*Medium padding*/
-
-.pst { padding-top: 1em; }
-
-.psb { padding-bottom: 1em; }
-
-.psl { padding-left: 1em; }
-
-.psr { padding-right: 1em; }
+.pslr { padding: 0 1em; }
 
 /*Medium padding*/
+
+.pmt { padding-top: 1em; }
+
+.pmb { padding-bottom: 1em; }
+
+.pmtb { padding: 1em 0; }
+
+.pml { padding-left: 1em; }
+
+.pmr { padding-right: 1em; }
+
+.pmlr { padding: 1em; }
+
+/*Big padding*/
 
 .pbt { padding-top: 1.5em; }
 
 .pbb { padding-bottom: 1.5em; }
 
+.pbtb { padding: 1em 0; }
+
 .pbl { padding-left: 1.5em; }
 
 .mbr { padding-right: 1.5em; }
+
+.pbtb { padding: 0 1em; }
+
