--- a/ratatouille.css
+++ b/ratatouille.css
@@ -2,10 +2,19 @@
   Base on KNACSS => www.KNACSS.com (2013-10) @author: Raphael Goetter, Alsacreations
 */
 
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-size: 1em;
   line-height:1.5;
+  margin: 0;
 }
+
+
 
 /* ==========================================================================
    RESET
@@ -37,6 +46,13 @@ img {
   height: auto;
 }
 
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
+}
 
 /* ==========================================================================
    Mise en page
@@ -69,6 +85,43 @@ img {
 .big {
   font-size: 1.2em;
 }
+
+/*Colonnes 2, 3 et 4*/
+
+.col2, .col3, .col4 {
+  letter-spacing: -0.31em;
+}
+
+.col2 > *,  .col3 > *,  .col4 > * {
+  display: inline-block;
+  letter-spacing: normal;
+  margin-left: 1%;
+}
+
+  .col2 > * {
+    display: inline-block;
+    width: 49.5%;
+  }
+
+    .col2 > *:nth-child(2n+1) {
+      margin-left: 0;
+    }
+
+  .col3 > * {
+    width: 32.7%;
+  }
+
+    .col3 > *:nth-child(3n+1) {
+      margin-left: 0;
+    }
+
+  .col4 > * {
+    width: 24.3%;
+  }
+
+    .col4 > *:nth-child(4n+1) {
+      margin-left: 0;
+    }
 
 /*====== margin + padding =======*/
 
