--- a/ratatouille.css
+++ b/ratatouille.css
@@ -1,5 +1,6 @@
 /*
   Base on KNACSS => www.KNACSS.com (2013-10) @author: Raphael Goetter, Alsacreations
+  and normalize.css
 */
 
 * {
@@ -8,22 +9,35 @@
           box-sizing: border-box;
 }
 
+html {
+  font-family: sans-serif; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
 body {
   font-size: 1em;
   line-height:1.5;
   margin: 0;
+  font-family: sans-serif;
 }
-
-
-
-/* ==========================================================================
-   RESET
-   ========================================================================== */
 
 
 /* ==========================================================================
    Mise en forme
    ========================================================================== */
+   
+code,
+kbd,
+pre,
+samp {
+    font-family: monospace, serif;
+}
+
+pre {
+    white-space: pre-wrap;
+}
+
 
 .upper {
   text-transform: uppercase;
