add table collapse

--- a/ratatouille.css
+++ b/ratatouille.css
@@ -78,6 +78,10 @@ iframe {
   float: right;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 /* ==========================================================================
    Mise en page
    ========================================================================== */
