--- a/ratatouille.css
+++ b/ratatouille.css
@@ -31,7 +31,11 @@ h2:first-child,
 h3:first-child,
 h4:first-child,
 h5:first-child,
-h6:first-child {
+h6:first-child,
+p:first-child,
+ul:first-child,
+ol:first-child,
+dl:first-child{
   margin-top: 0;
 }
 
