figure remove margin

--- a/ratatouille.css
+++ b/ratatouille.css
@@ -85,6 +85,10 @@ table {
   border-collapse: collapse;
 }
 
+figure {
+  margin: 0;
+}
+
 /* ==========================================================================
    Mise en page
    ========================================================================== */
