--- a/ratatouille.css
+++ b/ratatouille.css
@@ -108,9 +108,15 @@ figure {
 
     .dtable > * > * { display:table-cell; }
 
-.accessHide {
+.element-invisible {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
   position: absolute;
-  top: -99999px;
+  width: 1px;
 }
 
 .small {
