--- a/ratatouille.css
+++ b/ratatouille.css
@@ -135,6 +135,7 @@ figure {
 
 .col2 > *,  .col3 > *,  .col4 > *, .colSidebarLeft > *, .colSidebarRight > * {
   display: inline-block;
+  vertical-align: top;
   letter-spacing: normal;
   margin-left: 1%;
 }
