--- a/ratatouille.css
+++ b/ratatouille.css
@@ -89,6 +89,15 @@ figure {
   margin: 0;
 }
 
+button,
+input,
+select,
+textarea {
+    font-family: inherit; /* 1 */
+    font-size: 100%; /* 2 */
+    margin: 0; /* 3 */
+}
+
 /* ==========================================================================
    Mise en page
    ========================================================================== */
