--- a/ratatouille.css
+++ b/ratatouille.css
@@ -93,9 +93,13 @@ button,
 input,
 select,
 textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 2 */
-    margin: 0; /* 3 */
+    font-family: inherit;
+    font-size: 100%;
+    margin: 0;
+}
+
+input[type="search"] {
+    -webkit-appearance: textfield;
 }
 
 /* ==========================================================================
