--- a/less-ratatouille.less
+++ b/less-ratatouille.less
@@ -1,1 +1,39 @@
-/*Mixins less in coming*/
+/*Colonnes 2, 3 et 4*/
+
+.col2, .col3, .col4, .colSidebarLeft, .colSidebarRight {
+  letter-spacing: -5px; /*fix bug ff PC*/
+  > * {
+    display: inline-block;
+    vertical-align: top;
+    letter-spacing: normal;
+    margin-left: 1%;
+  }
+}
+
+.colSidebarLeft > *:first-child {
+  width:31%;
+  margin-left:0;
+  + * { width:68%; }
+}
+
+.colSidebarRight > *:first-child {
+  width:68%;
+  margin-left:0;
+  + * { width:31%; }
+}
+
+.col2 > * {
+  display: inline-block;
+  width: 49.5%;
+  &:nth-child(2n+1) { margin-left: 0; }
+}
+
+.col3 > * {
+  width: 32.65%;
+  &:nth-child(3n+1) { margin-left: 0; }
+}
+
+.col4 > * {
+  width: 24.25%;
+  &:nth-child(4n+1) { margin-left: 0; }
+}
