add width class + nomarge col

--- a/ratatouille.css
+++ b/ratatouille.css
@@ -140,17 +140,34 @@ input[type="search"] {
   font-size: 1.2em;
 }
 
+/*Width*/
+
+.w100 { width:100%; }
+.w90 { width:90%; }
+.w80 { width:80%; }
+.w70 { width:70%; }
+.w60 { width:60%; }
+.w50 { width:50%; }
+.w40 { width:40%; }
+.w30 { width:30%; }
+.w20 { width:20%; }
+.w10 { width:10%; }
+
 /*Colonnes 2, 3 et 4*/
 
-.col2, .col3, .col4, .colSidebarLeft, .colSidebarRight {
+.col {
   letter-spacing: -5px; /*fix bug ff PC*/
 }
 
-.col2 > *,  .col3 > *,  .col4 > *, .colSidebarLeft > *, .colSidebarRight > * {
+.col > * {
   display: inline-block;
   vertical-align: top;
   letter-spacing: normal;
   margin-left: 1%;
+}
+
+.colNomarge > * {
+  margin-left: 0;
 }
 
 .colSidebarLeft > *:first-child {
